updated styles for ArXiv

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -16,8 +16,9 @@
 @bg-very-light: #f5f5f5;
 @shade: #888;
 @lift: #fff;
-@bg-anchor: #002C40; // Dark color background
+@bg-anchor: #4384e5; // Dark color background
 @bg-anchor-lift: lighten(@bg-anchor, 10%);
+@bg-anchor-shade: darken(@bg-anchor, 10%);
 // Primary color for links and buttons
 @primary: #006798;
 @primary-lift: lighten(@primary, 10%);
