--- a/src/styles/arxiv.less
+++ b/src/styles/arxiv.less
@@ -14,7 +14,14 @@
 .pkpFormGroup__localeGroup {
     display: flex;
     align-items: flex-end;
+    column-gap: 1.5rem; //skolomon
 }
 .pkpFormGroup__locale--isVisible {
     flex:1;
+}
+.pkpTab .pkpFormGroup__localeGroup {
+    flex-direction: row-reverse;
+}
+.pkpTab .modal .pkpFormGroup__localeGroup {
+    flex-direction: row;
 }
