--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -16,9 +16,10 @@
 @bg-very-light: #f5f5f5;
 @shade: #888;
 @lift: #fff;
-@bg-anchor: #4384e5; // Dark color background
+@bg-header: #4384e5;
+@bg-anchor: #00496b; // Dark color background
 @bg-anchor-lift: lighten(@bg-anchor, 10%);
-@bg-anchor-shade: darken(@bg-anchor, 10%);
+@bg-anchor-shade: darken(@bg-header, 20%);
 // Primary color for links and buttons
 @primary: #006798;
 @primary-lift: lighten(@primary, 10%);
@@ -85,4 +86,4 @@
 @bg-border: 1px solid @bg-border-color;
 @bg-border-light: 1px solid @bg-border-color-light;
 @grid-border: 1px solid @grid-border-color;
-@radius: 2px;
+@radius: 4px; //2px; //skolomon
