--- a/src/styles/arxiv.less
+++ b/src/styles/arxiv.less
@@ -1,20 +1,27 @@
-// Styles for the ArXiv Academy project
+// Styles for the ArXiv Academy project (c) skolomon
 
 .app__contextImage {
-    padding: 0 1rem;
-}
-.app__contextImage img {
-    display: block;
-    max-height: 2.143rem;
-    max-width: 100%;
-    width: auto;
-    height: auto;
+    padding: 0 1rem 0 0;
+    display: flex;
+    align-items: center;
+
+    img {
+        display: block;
+        max-height: 34px; //2.143rem;
+        max-width: 100%;
+        width: auto;
+        height: auto;
+        overflow: hidden;
+    }
+    button .fa {
+        font-size: 1.75rem!important;
+    }
 }
 
 .pkpFormGroup__localeGroup {
     display: flex;
     align-items: flex-end;
-    column-gap: 1.5rem; //skolomon
+    column-gap: 1.5rem;
 }
 .pkpFormGroup__locale--isVisible {
     flex:1;
